--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -11,7 +11,7 @@
       <%= f.text_area :address, :class => 'text_area' %>
     </div>
   </div>
-  <div class="control-group">
+ <!--  <div class="control-group">
     <%= f.label :longitude, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :longitude, :class => 'text_field' %>
@@ -22,7 +22,7 @@
     <div class="controls">
       <%= f.text_field :latitude, :class => 'text_field' %>
     </div>
-  </div>
+  </div> -->
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
